[tool.poetry]
name = "flight-delays"
version = "1.0"
description = "Us Airlines and Airport Delays Analysis"
authors = ["Dominik Bacher <dominikbacher@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://python-poetry.org/"
repository = "https://github.com/dominik117/flight-delays"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
