[tool.poetry]
name = "flight-delays"
version = "1.0"
description = "Us Airlines and Airport Delays Analysis"
authors = ["Dominik Bacher <dominikbacher@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://python-poetry.org/"
repository = "https://github.com/dominik117/flight-delays"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.1"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"
scipy = "^1.13.0"
streamlit = "^1.34.0"
adjusttext = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
